--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-calendar": "^5.1.0",
     "react-date-picker": "^11.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.14"
+    "tailwindcss": "^4.0.14",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
